<resources>
    <string name="app_name" translatable="false">NMedia</string>
    <string name="hello" translatable="false">NMedia!</string>
    <string name="avatar_description" translatable="false">Avatar</string>
    <string name="menu_description" translatable="false"> Menu</string>
    <string name="heart_description" translatable="false">heart</string>
    <string name="share_description" translatable="false">share</string>
    <string name="eye_description" translatable="false">eye</string>
    <string name="remove" translatable="false">Remove</string>
    <string name="post_content_hint" translatable="false">Post Content</string>
    <string name="error_empty_content" translatable="false">Post content is empty</string>
    <string name="edit" translatable="false">Edit</string>
    <string name="edit_message" translatable="false">Edit Message</string>
    <string name="chooser_share_post" translatable="false">Поделиться</string>
    <string name="description_post_save" translatable="false">Save</string>
    <string name="video_thumbnail" translatable="false">Video thumbnail</string>
    <string name="play_video" translatable="false">Play video</string>
</resources>