<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:padding="4dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    tools:context=".activity.MainActivity">

    <ImageView
        android:id="@+id/avatar"
        app:srcCompat="@drawable/ic_netology_original_48dp"
        android:contentDescription="@string/avatar_description"
        android:layout_width="48dp"
        android:layout_height="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:paddingBottom="8dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/menu"
        style="@style/Widget.Material3.Button.IconButton"
        app:icon="@drawable/baseline_more_vert_24"
        android:contentDescription="@string/menu_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:checkable="true"
        />

    <TextView
        android:id="@+id/author"
        tools:text="@sample/posts.json/data/author"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_space"
        android:layout_marginEnd="@dimen/common_space"
        android:layout_marginBottom="4dp"
        app:layout_constraintStart_toEndOf="@+id/avatar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/published"
        app:layout_constraintEnd_toStartOf="@+id/menu"
        app:layout_constraintVertical_chainStyle="packed"
        android:maxLines="1"
        android:ellipsize="end" />

    <TextView
        android:id="@+id/published"
        tools:text="@sample/posts.json/data/published"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_space"
        android:paddingBottom="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/avatar"
        app:layout_constraintStart_toEndOf="@+id/avatar"
        app:layout_constraintEnd_toStartOf="@+id/menu"
        app:layout_constraintTop_toBottomOf="@+id/author"
        android:maxLines="1"
        android:ellipsize="end" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/topBarrier"
        app:constraint_referenced_ids="avatar,author,published"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom" />

    <TextView
        android:id="@+id/content"
        tools:text="@sample/posts.json/data/content"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_space"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topBarrier"
        android:paddingHorizontal="8dp"
        android:autoLink="web" />




    <androidx.constraintlayout.widget.Group
        android:id="@+id/video_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="video_container" />

    <FrameLayout
        android:id="@+id/video_container"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:layout_marginTop="@dimen/common_space"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/content">

        <ImageView
            android:id="@+id/video_thumbnail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/video_placeholder"
            android:contentDescription="@string/video_thumbnail" />

        <ImageButton
            android:id="@+id/video_play"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_gravity="center"
            android:background="@android:color/transparent"
            android:src="@android:drawable/ic_media_play"
            android:contentDescription="@string/play_video" />
    </FrameLayout>



    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/actionBarrier"
        app:constraint_referenced_ids="content,video_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        />



    <com.google.android.material.button.MaterialButton
        android:id="@+id/like"
        style="@style/Widget.App.LikeButton"
        android:contentDescription="@string/heart_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:checkable="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/actionBarrier"
        app:icon="@drawable/ic_like_selector"
        tools:checked="true"
        android:paddingBottom="8dp"
        />



    <com.google.android.material.button.MaterialButton
        android:id="@+id/share"
        style="@style/Widget.Material3.Button.IconButton"
        android:checkable="true"
        app:icon="@drawable/sharp_share_24"
        android:contentDescription="@string/share_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/like"
        app:layout_constraintTop_toTopOf="@id/like"
        app:layout_constraintBottom_toBottomOf="@id/like"
        android:minWidth="48dp"
        android:minHeight="48dp"
        />




    <ImageView
        android:id="@+id/eye"
        app:srcCompat="@drawable/baseline_remove_red_eye_24"
        android:contentDescription="@string/eye_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginEnd="8dp"

        app:layout_constraintTop_toBottomOf="@id/actionBarrier"
        app:layout_constraintEnd_toStartOf="@id/views"
        app:layout_constraintTop_toTopOf="@id/like"
        app:layout_constraintBottom_toBottomOf="@id/like"
        app:tint="?colorControlNormal" />

    <TextView
        android:id="@+id/views"
        tools:text="@sample/posts.json/data/viewsCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/common_space"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/like"
        app:layout_constraintBottom_toBottomOf="@id/like"/>




</androidx.constraintlayout.widget.ConstraintLayout>